# AI-Code-Review-and-Architecture-Analysis_Platform

./: .editorconfig  .env.example  .env.production.template  .gitignore  .markdown-link-check.json  .markdownlint.json  .pylintrc  AI_ORCHESTRATION_SUMMARY.md  AI_SELF_EVOLUTION_PROMPTS.md  AI_TRAINING_SYSTEM_SUMMARY.md  BUG_FIXES_BATCH_2.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_FIXES.md  CODE_REVIEW_OPTIMIZATION_REPORT.md  CODE_REVIEW_REPORT.md  COMPLETE_SYSTEM_STATUS.md  COMPLETION_REPORT.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DETAILED_ISSUES.md  DEVOPS_SUMMARY.md  DISTRIBUTED_VCAI_SUMMARY.md  DOCS.md  Dockerfile  ENHANCEMENT_ROADMAP.md  ENTERPRISE_AUDIT_REPORT.md  FILE_INDEX.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  ISSUE_TRACKING_SYSTEM.md  KUBERNETES_CI_CD_SUMMARY.md  LICENSE  MASTER_INDEX.md  Makefile  (+33 more)
.github/: SECRETS.md  dependabot.yml
.github/workflows/: ci-cd.yml  docker-build.yml  docs-generation.yml  security-scanning.yml  testing-pipeline.yml  tests.yml  three-version-pipeline.yml  version-compat.yml  version-notify.yml  version-policy.yml
ai_core/: __init__.py  requirements.txt
ai_core/code_analysis/: __init__.py  analysis_engine.py  correction_system.py  ml_pattern_recognition.py  version_training.py
ai_core/compliance/: compliance_modes.yaml
ai_core/continuous_learning/: __init__.py  continuous_learner.py  incremental_learning.py  knowledge_distillation.py  memory_system.py
ai_core/data_pipeline/: __init__.py  anomaly_detector.py  data_cleaning.py  multimodal_cleaner.py  quality_assessor.py
ai_core/distributed_vc/: __init__.py  auto_network_learning.py  core_module.py  data_cleansing_pipeline.py  data_lifecycle_manager.py  dual_loop.py  infinite_learning_manager.py  learning_engine.py  monitoring.py  protocol.py  rollback.py  version_engine.py
ai_core/foundation_model/: __init__.py  architecture.py  autonomous_learning.py  continual_learning.py  data_pipeline.py  posttraining.py  practical_deployment.py  pretraining.py  quantization.py  requirements.txt  vcai_crai_integration.py  vector_index.py
ai_core/model_architecture/: __init__.py  distributed_training.py  modular_architecture.py  multi_task.py  reasoning_engine.py
ai_core/networked_learning/: __init__.py  config.py  system.py
ai_core/registries/: model_registry.yaml  prompt_registry.yaml
ai_core/routing/: routing_policies.yaml
ai_core/self_evolution/: __init__.py  auto_fix_cycle.py  bug_fixer.py  fix_verifier.py
ai_core/three_version_cycle/: __init__.py  cross_version_feedback.py  dual_ai_coordinator.py  experiment_framework.py  parallel_orchestrator.py  self_evolution_cycle.py  spiral_evolution_manager.py  v3_comparison_engine.py  version_ai_engine.py  version_manager.py
ai_core/version_architecture/: CHANGELOG.md  README.md  __init__.py  ai_subsystem.py  ai_subsystems.py  api_compatibility.py  documentation.py  (+15 more)
backend/: .env.example  Dockerfile.test  constants.py  dev-api-server.py  dev-auth-server.py  pytest.ini  requirements-base.txt  requirements-test.txt  requirements.txt
database/: init-db.sh
docker/: docker-compose-offline.yml  docker-compose.services.yml  docker-compose.test.yml  dockerignore.template
docs/: API_CODE_ANALYSIS.md  ARCHITECTURE_DESIGN.md  BUGS_AND_OPTIMIZATIONS.md  CODE_HEALTH_IMPROVEMENT_PLAN.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_OPTIMIZATION_PLAN.md  DEPLOYMENT_MANUAL.md  FOUNDATION_MODEL_DEPLOYMENT_GUIDE.md  FUNCTIONALITY_MATRIX.md  GITHUB_SECRETS_SETUP.md  GRANULAR_CODE_AUDIT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  INDEX.md  NETWORKED_LEARNING_SYSTEM.md  OAUTH_SETUP_GUIDE.md  OPERATIONS_RUNBOOK.md  OPTIMIZATION_CHANGES.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PROJECT_OPTIMIZATION_REVIEW.md  ProjectName-Project_plan_ver-1.docx  ProjectName-SRS_ver-1.docx  ProjectName-Test _plan_ver-1.docx  ProjectName-Test _record_ver-1.docx  ProjectName-Trecability _record_ver-1.docx  SELF_EVOLUTION_CYCLE.md  SELF_HEALING_ERROR_KNOWLEDGE_BASE.md  TECHNICAL_DEBT_REGISTER.md  TECHNICAL_DEBT_TRACKER.md  TECHNOLOGY_SELECTION_REPORT.md  THREE_VERSION_COORDINATION.md  THREE_VERSION_IMPLEMENTATION_TRACKER.md  a.md  ai-orchestration.md  ai-routing-policy.md  api-compat-check.md  api-gateway.md  api-reference.md  architecture.md  audit-logging.md  (+39 more)
examples/: version_architecture_example.py
frontend/: .env.development  .env.example  .env.production  .eslintrc.cjs  Dockerfile  eslint-output.json  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
gateway/: dynamic.yml  ingress-nginx.yaml  nginx-offline.conf  nginx-production.conf  nginx.conf  traefik.yml  traffic-routing.yaml
infra/: README.md  argo-rollouts.yaml  kafka-topics.yaml  namespaces.yaml  observability.yaml
kubernetes/: deployments.yaml  hpa-ingress.yaml  namespaces.yaml  network-policies.yaml
modules/: BACKEND_MAPPING.md  INTEGRATION_GUIDE.md  MODULE_INDEX.md  MODULE_ORGANIZATION.md  README.md  __init__.py
monitoring/: prometheus-test.yml
nginx/: security.conf
observability/: grafana-datasources.yml  loki-config.yml  otel-collector-config.yml  prometheus.yml  tempo-config.yml
schemas/: README.md  tech-candidate.json
scripts/: api_test.py  apply_self_healing_fixes.py  check_rollout_health.sh  fix_datetime_utcnow.py  fix_k8s_security.py  generate_api_docs.py  generate_version_docs.py  health_check.py  k6-shadow.js  load_test.py  migrate_version.py  optimize_project.py  requirements.txt  run_comprehensive_optimization.py  run_tests.sh  secure_init.py  seed_data.py  start-dev.ps1  start-dev.sh  start-local.ps1  statistical_tests.py  validate-production.py  validate_env.py  verify_deployment.py  verify_networked_learning.py  verify_self_healing_system.py  verify_three_version.py  version_health_report.py
services/: jest.config.js
tests/: README.md  __init__.py  conftest.py  test_version_promotion.py
(+1175 files in other folders)
