[metadata]
name = ai-code-review-platform
version = 2.0.0
description = AI-Powered Code Review and Architecture Analysis Platform
author = Platform Team
author_email = team@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.10
packages = find:
install_requires =
    fastapi>=0.109.0
    uvicorn>=0.27.0
    pydantic>=2.5.0
    sqlalchemy>=2.0.0
    asyncpg>=0.29.0
    redis>=5.0.0
    httpx>=0.26.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-xdist>=3.5.0
    pytest-timeout>=2.2.0
    pytest-mock>=3.12.0
    pytest-random-order>=1.1.0
    black>=23.12.0
    ruff>=0.1.9
    mypy>=1.8.0
    
test =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-xdist>=3.5.0
    pytest-timeout>=2.2.0
    pytest-mock>=3.12.0
    coverage[toml]>=7.4.0
    faker>=22.0.0
    factory-boy>=3.3.0
    httpx>=0.26.0
    respx>=0.20.0

mutation =
    mutmut>=2.4.0

e2e =
    playwright>=1.40.0
    pytest-playwright>=0.4.0

all =
    %(dev)s
    %(test)s
    %(mutation)s
    %(e2e)s

[tool:pytest]
# See pytest.ini for full configuration

[coverage:run]
source = backend,services,ai_core
branch = true
parallel = true

[coverage:report]
fail_under = 95
show_missing = true
precision = 2

[coverage:html]
directory = htmlcov

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.venv,venv

[mypy]
python_version = 3.11
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[mutmut]
paths_to_mutate = backend/shared
backup = false
runner = python -m pytest -x --tb=no -q
tests_dir = tests/
dict_synonyms = Struct,NamedStruct
